add admin handler
